force-app/main/default/objects/Hydrafacial_Treatment_s__c/Hydrafacial_Treatment_s__c.object-meta.xml
<CustomObject>
    <label>Hydrafacial Treatment Detail</label>
    <nameField>
        <label>Hydrafacial Treatment(s) Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hydrafacial Treatment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>