force-app/main/default/objects/Hydrafacial_Treatment_s__c/fields/Booster__c.field-meta.xml
<CustomField>
    <fullName>Booster__c</fullName>
    <label>Booster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>