force-app/main/default/objects/Hydrafacial_Treatment_s__c/fields/Hydrafacial_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Hydrafacial_Treatment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hydrafacial  Treatment</label>
    <referenceTo>Hydrafacial_Treatment__c</referenceTo>
    <relationshipName>Hydrafacial_Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>