force-app/main/default/objects/Hydrafacial_Treatment_s__c/fields/Serum__c.field-meta.xml
<CustomField>
    <fullName>Serum__c</fullName>
    <label>Serum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>